@@ -1,4 +1,4 @@
 DIST sqlite3-ruby-1.2.4.tar.bz2 80907 RMD160 5757d7ce79cb39a21c62daa19e8725a037bbd4c1 SHA1 1ff66fc2fc3e40af9e21f81377eb343fe19619b1 SHA256 4781bb0d4d0ef6d1078dfda2832af30332e2f28a316c17eb854bb7ff5ea6b0d6
-EBUILD sqlite3-ruby-1.2.4.ebuild 1505 RMD160 37aaea8af5e3ccea3e640b70fbc0cc4d8b3a97c7 SHA1 504219d6b2a048e68d6a3b8038467542606f6c99 SHA256 5d2b8f87217bd07eb02ee729b28c8d260b6f0e2e60f480060108db855abfed7d
-MISC ChangeLog 3278 RMD160 de5b3ab24eaca0a47a281d823a95f81c599de9b7 SHA1 dcba0bae95991f38183b32dff5484b8721c3194a SHA256 3ae863aacb763f23246f70c3d91cae59b81b187d0b83341eb7808be753ccb5e8
+EBUILD sqlite3-ruby-1.2.4-r30.ebuild 978 RMD160 436b9e2f3a1c45d34866afe8b818c696e1c79271 SHA1 08f3661f4777acd5b2ff7b4ad9bb779b3135d086 SHA256 12d908b2d61e5cdc9e442c9558b0d6fdb6565d5d9ec3c9242570310c65398024
+MISC ChangeLog 3462 RMD160 598bdacfc7bc916b7af48f9d0f6941953e6e1d55 SHA1 a4142b29bc34d7af1b0c1761bd73e0b90526d7d9 SHA256 1001f18b410bd4b3fe4a414e1bca4bb17c06bfac1e2aa59ecafea1440413b6a9
 MISC metadata.xml 255 RMD160 5728a5d67f1b20016a81c8594151e41bc5442a74 SHA1 2616b37bf1924a7ea724e1e12dc7096e602445c5 SHA256 2316a3c7f17bf8dd9d41dfd645f14b1d0d61778aa91e45639eaec81f551cb68a
